[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
num-integer = "0.1.45"
itertools = "0.12.0"
linked-hash-map = "0.5.6"
petgraph = "0.6.4"
rand = "0.8.5"